--- a/index.html
+++ b/index.html
@@ -45,17 +45,41 @@
                             <a href="#">MORE</a>
                         </div>
                     </div>
-                    <div class="two"></div>
+                    <div class="two">
+                        <div class="circle_div_2">
+                            <div class="circle_2"></div>
+                        </div>
+                        <div class="text_div_2">
+                            <button>FREE</button>
+                            <h1>Code Editor</h1>
+                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                nulla
+                                pariatur</p>
+                            <a href="#">MORE</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="prttwo">
-                    <div class="three"></div>
+                    <div class="three">
+                        <div class="circle_div_2">
+                            <div class="circle_2"></div>
+                        </div>
+                        <div class="text_div_2">
+                            <button>FREE</button>
+                            <h1>Personal Domain</h1>
+                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                nulla
+                                pariatur</p>
+                            <a href="#">MORE</a>
+                        </div>
+                    </div>
                     <div class="four">
                         <div class="circle_div">
                             <div class="circle"></div>
                         </div>
                         <div class="text_div">
                             <button>FREE</button>
-                            <h1>SSL Certificate</h1>
+                            <h1>Media Storage</h1>
                             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                                 nulla
                                 pariatur</p>
